--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.0",
     "next": "13.1.5",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^11.8.0",
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   }
 }
